--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Users</title>
+    <title>Workout Leaderboard</title>
 
     <!-- JS libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="text/javascript" src="/js/foundation.min.js"></script>
     <script src="https://use.fontawesome.com/940df806e3.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
-    <script type="text/javascript" src="/js/users.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
 
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="/css/foundation.min.css">
@@ -20,14 +20,14 @@
     <nav class="top-bar">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="/"><i class="fa fa-user"></i> User Dispay</a></h1>
+          <h1><a href="/"><i class="fa fa-user"></i> Workout Leaderboard</a></h1>
         </li>
       </ul>
       <section class="top-bar-section">
         <ul id="nav-right" class="right">
           <li class="divider"></li>
           <li>
-            <a href="https://github.com/cblair/user_display">
+            <a href="https://github.com/cblair/workout_leaderboard">
               <i class="fa fa-github"></i> About
             </a>
           </li>
