updates to docs, main page

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 
     <!-- JS libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script type="text/javascript" src="/js/foundation.min.js"></script>
     <script src="https://use.fontawesome.com/940df806e3.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
@@ -35,11 +36,11 @@
       </div>
     </nav>
 
-    <!-- User Display -->
+    <!-- Leaderboard -->
     <div class="row">
         <div class="large-12 columns">
             <span id="error" class="error"></span>
-            <h1>Users</h1>
+            <h1>Workouts</h1>
             <table id="user-display">
                 <thead>
                     <tr>
