--- a/public/leaderboard/table.html
+++ b/public/leaderboard/table.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="large-12 columns">
         <span id="error" class="error"></span>
-        <h1>Workouts</h1>
+        <h1>Workouts <i class="fa fa-spin fa-spinner"></i></h1>
         <table>
             <thead>
                 <tr>
-                    <td>username</td>
+                    <td>User</td>
                     <td>Summary</td>
                     <!-- Requirement: Display a summary section that will roll
                         up some neat stats about the results. -->
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="row in leaderboardCtl.leaderboardData">
-                    <!-- username-->
+                    <!-- User -->
                     <td><img class="profile-image" ng-src="{{row.profileImg}}">
                         <a href="{{row.profileUrl}}">{{row.username}}</a>
                     </td>
